# Little-Ruler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_kr.md
DalbaragiMapper/: .gitignore  DalbaragiMapper.sln
DalbaragiMapper/DalbaragiMapper/: DalbaragiMapper.rc  DalbaragiMapper.vcxproj  DalbaragiMapper.vcxproj.filters  Fixed.h  d_dalbaragimapper.cpp  d_dalbaragimapper.h  d_daldef.h  d_graphics_view.cpp  d_meshgeo.cpp  d_opengl.h  d_opengl_renderunit.cpp  d_opengl_shader.cpp  d_opengl_state.cpp  d_property_view.cpp  d_scene.h
DalbaragiUtils/: .gitignore  dallevel.py  dallevel_old.py  demo_mapcreate.py  dlbcompile.py  interactivemapper.py  quicktest.py  setup.py  test.py
DalbaragiUtils/dalutils/map/: collider.py  datablock.py  interface.py  mapbuilder.py  meshbuilder.py  objectdef.py  primitives.py  typecode.py
DalbaragiUtils/dalutils/util/: binutil.py  containers.py  exportfile.py  math.py  path.py  reporter.py
DalbaragiUtils/demo/: hroom.py  simple_map.py  vast_city_like.py  water_bowl.py  water_n_slope.py
DalbaragiUtils/level/: base_info.py  build_info.py  element_interface.py  level_builder.py  level_item.py  mesh_info.py  parser.py  primitive_data.py  utils.py
DalbaragiUtils/level/datastruct/: attrib_collider.py  attrib_complex.py  attrib_leaf.py  error_reporter.py  interface.py  item_builder.py  level_builder.py
LittleRulerAndroid/: .gitignore
LittleRulerAndroid/app/: .gitignore  build.gradle
LittleRulerAndroid/app/src/main/cpp/: CMakeLists.txt  ContextJNI.h  TouchInputArray.h  interface4jni.cpp  javautil.cpp  javautil.h
LittleRulerAndroid/app/src/main/cpp/dalbaragi/: c_input_apply.cpp  c_input_apply.h  d_context.h  d_context_main.cpp  d_context_main.h  d_widgettext.cpp  d_widgettext.h  g_actor.cpp  g_actor.h  g_charastate.cpp  g_charastate.h  g_ecs.cpp  g_ecs.h  g_fsm.cpp  g_fsm.h  m_collider.cpp  m_collider.h  m_collision2d.cpp  m_collision2d.h  o_overlay_master.cpp  o_overlay_master.h  o_text_cache.cpp  o_text_cache.h  o_widget_base.cpp  o_widget_base.h  o_widget_primitive.cpp  o_widget_primitive.h  o_widget_textbox.cpp  o_widget_textbox.h  o_widget_texview.cpp  o_widget_texview.h  o_widgetbase.cpp  o_widgetbase.h  o_widgetcache.cpp  o_widgetcache.h  o_widgetmanager.cpp  p_animation.cpp  p_animation.h  p_dalopengl.cpp  p_dalopengl.h  (+78 more)
LittleRulerAndroid/app/src/main/cpp/dalbaragi/utils/: d_filesystem.cpp  d_filesystem.h  d_fixednum.h  d_geometrymath.cpp  d_geometrymath.h  d_pool.h  u_fileutils.cpp  u_fileutils.h  u_imagebuf.h  u_timer.cpp  u_timer.h
LittleRulerAndroid/gradle/wrapper/: gradle-wrapper.properties
LittleRulerWindows/: .gitignore  LittleRulerWindows.sln
LittleRulerWindows/DalbaragiMapper/: DalbaragiMapper.aps  DalbaragiMapper.vcxproj  DalbaragiMapper.vcxproj.filters  d_dalbaragimapper.cpp  d_dalbaragimapper.h  d_daldef.h  d_graphics_view.cpp  d_graphics_view.h  d_meshgeo.h  d_opengl.cpp  d_opengl_shader.cpp  d_opengl_shader.h  d_opengl_state.cpp  d_opengl_state.h  d_property_view.cpp  d_property_view.h  d_scene.cpp  d_scene.h  d_sharedinfo.cpp  d_sharedinfo.h  d_uniloc.cpp  d_uniloc.h  dalbaragimapper.qrc  main.cpp
LittleRulerWindows/LittleRulerWindows/: LittleRulerWindows.vcxproj  LittleRulerWindows.vcxproj.filters  icon.aps  icon.rc  main.cpp
LittleRulerWindows/Utils/: Utils.vcxproj  Utils.vcxproj.filters
Resource/asset/glsl/: animated.frag  animated.vert  depth.vert  depth_f.glsl  depthanime.vert  f_pbr.glsl  f_scattering.glsl  fillscreen.frag  fillscreen.vert  fillscreen_f.glsl  fillscreen_v.glsl  general.frag  general.vert  general_f.glsl  i_envmap.glsl  i_lighting.glsl  i_lighting_forV.glsl  i_lightmap.glsl  i_planeclip.glsl  i_scattering.glsl  i_skeleton.glsl  overlay.frag  (+36 more)
engine/Dalbaragi/: CMakeLists.txt
engine/Dalbaragi/lightweight/: CMakeLists.txt  d_aabb_2d.cpp  d_aabb_2d.h  d_input_data.cpp  d_input_data.h  u_byteutils.cpp  u_byteutils.h
engine/Dalbaragi/overlay/: CMakeLists.txt  d_glyph.cpp  d_glyph.h  d_overlay_base.cpp  d_overlay_base.h  d_text_overlay.cpp  d_text_overlay.h  d_w_text_view.cpp  d_w_text_view.h  d_widget.cpp  d_widget.h  d_widget_manager.cpp  d_widget_manager.h  d_widget_view.cpp  d_widget_view.h
engine/Dalbaragi/physics/: CMakeLists.txt  d_collider.cpp  d_collider.h  d_modifierabc.h  d_modifiers.cpp  d_modifiers.h  d_particle.cpp  d_particle.h  d_phyworld.cpp  d_phyworld.h  d_precision.cpp  d_precision.h
engine/Dalbaragi/resparser/: CMakeLists.txt  d_dlbparser.cpp  d_dlbparser.h  d_mapdata.cpp  d_mapdata.h  d_mapparser.cpp  d_mapparser.h
engine/Dalbaragi/runtime/: CMakeLists.txt  c_input_apply.cpp  c_input_apply.h  d_camera.cpp  d_camera.h  d_context.h  d_context_main.cpp  d_context_main.h  d_global_macro.h  d_overlay_interface.cpp  d_overlay_interface.h  d_widgettext.cpp  d_widgettext.h  g_actor.cpp  g_actor.h  g_charastate.cpp  g_charastate.h  m_collider.cpp  m_collider.h  o_widget_textbox.cpp  o_widget_textbox.h  o_widget_texview.cpp  o_widget_texview.h  o_widgetbase.cpp  o_widgetbase.h  o_widgetmanager.cpp  o_widgetmanager.h  p_animation.cpp  p_animation.h  p_dalopengl.cpp  p_dalopengl.h  p_globalfsm.h  p_light.cpp  p_light.h  p_meshStatic.cpp  p_meshStatic.h  p_model.cpp  p_model.h  p_render_master.cpp  p_render_master.h  (+23 more)
engine/Dalbaragi/util/: CMakeLists.txt  d_debugview.cpp  d_debugview.h  d_filesystem.cpp  d_filesystem.h  d_geometrymath.cpp  d_geometrymath.h  d_logger.cpp  d_logger.h  d_shaderProcessor.cpp  d_shaderProcessor.h  d_transform.cpp  d_transform.h  s_configs.cpp  s_configs.h  u_byteutils.cpp  u_byteutils.h  u_fileutils.cpp  u_imagebuf.cpp  u_math.cpp  u_math.h  u_strbuf.h  u_timer.cpp
engine/DalbaragiMapper/: CMakeLists.txt  d_dalbaragimapper.cpp  d_dalbaragimapper.h  d_meshgeo.cpp  d_meshgeo.h  d_opengl_renderunit.h  d_opengl_texture.cpp  d_opengl_texture.h  d_property_view.cpp  d_property_view.h  d_scene.cpp  d_time.cpp  d_time.h  d_uniloc.cpp  d_uniloc.h
engine/LittleRulerWindows/: CMakeLists.txt  main.cpp
externtool/lodepng/: CMakeLists.txt
externtool/lua/: CMakeLists.txt
script/: count_lines.py
script/local_tools/: path_tools.py
(+87 files in other folders)
